--- a/future-work.tex
+++ b/future-work.tex
@@ -6,10 +6,10 @@ This thesis, a cursory look at open source and low resource languages, has highl
 
 \subsection{Extending databases of OSS code for LRLs}
 
-The LRE Map resource is fantastic in that it has an order of magnitude more resources listed than other aggregators, like OLAC. With 2000 resources, it should be a port of call for linguists and researchers working on LRLs. Similarly, the database provided by Kornai's lab to measure language vitality has great potential, as it examines many aspects of digital language presence that aren't mentioned in the other large typological or reference databases. However, both fall short in a very important way; they don't link to the resources they mention. Ideally, they should be portals for language developers hoping to work on their specific languages. Extending these portals - or, as a last resort, making a new one - would be beneficial to language communities hoping to increase the scope of their language's digital presence. This is an area of ripe future research; the low-resource-languages list presented in Section~\ref{sec:solutions} is only a hint at might be possible with properly aggregated metadata.
+The LRE Map resource is fantastic in that it has an order of magnitude more resources listed than other aggregators, like OLAC. With 2000 resources, it should be a port of call for linguists and researchers working on LRLs. Similarly, the database provided by Kornai's lab to measure language vitality has great potential, as it examines many aspects of digital language presence that are not mentioned in the other large typological or reference databases. However, both fall short in a very important way; they do not link to the resources they mention. Ideally, they should be portals for language developers hoping to work on their specific languages. Extending these portals - or, as a last resort, making a new one - would be beneficial to language communities hoping to increase the scope of their language's digital presence. This is an area of ripe future research; the low-resource-languages list presented in Section~\ref{sec:solutions} is only a hint at might be possible with properly aggregated metadata.
 
 \subsection{Rethinking metrics for digital presence}
-\citet{kornai2013digital} was a seminal, groundbreaking analysis of language presence on the web. \citet{gibson2016assessing} was a good extension. \citet{soria2017digital} extends these even further, to better approximate digital language vitality. However, it excluded heritage languages, and doesn't judge specific languages to test its applicability. As this was a draft to elicit feedback (Soria, personal communication), they can be forgiven for this; but this is then, clearly, an area of future research. As I pointed out, there is no scale as of yet that ranks English on its own ranking, either, where it ought to be given its global digital dominance. And, finally, there isn't a good metric that combines quantitative and qualitative measurements together, although \citepos{kornai2015new} inclusion of SIL approaches this. While this would be difficult, I think that it could be possible.
+\citet{kornai2013digital} was a seminal, groundbreaking analysis of language presence on the web. \citet{gibson2016assessing} was a good extension. \citet{soria2017digital} extends these even further, to better approximate digital language vitality. However, it excluded heritage languages, and does not judge specific languages to test its applicability. As this was a draft to elicit feedback (Soria, personal communication), they can be forgiven for this; but this is then, clearly, an area of future research. As I pointed out, there is no scale as of yet that ranks English on its own ranking, either, where it ought to be given its global digital dominance. And, finally, there is not a good metric that combines quantitative and qualitative measurements together, although \citepos{kornai2015new} inclusion of SIL approaches this. While this would be difficult, I think that it could be possible.
 
 \subsection{Rethinking language diversity and typological relation}
 
@@ -36,11 +36,11 @@ The research here has highlighted many areas of research which could be opened o
 %
 %\subsection{Beyond Wikipedia}
 %
-%I'll talk about the shortcomings of both Wikipedia as a service, and Ethnologue as a provider of language data. Specifically, I want to draw attention to how Wikipedia treats its long-term contributors, and how Ethnologue charges exorbitant fees for using its data, and what we can do to improve this.
+%I will talk about the shortcomings of both Wikipedia as a service, and Ethnologue as a provider of language data. Specifically, I want to draw attention to how Wikipedia treats its long-term contributors, and how Ethnologue charges exorbitant fees for using its data, and what we can do to improve this.
 
 % \subsection{An Open Data Repository}
 
-% I'll spec out the plans for an open data repository that could be used to share data.
+% I will spec out the plans for an open data repository that could be used to share data.
 
 % - Peer-to-peer solution for sharing code
 %   - Stub out example
