--- a/case-studies.tex
+++ b/case-studies.tex
@@ -9,9 +9,9 @@ After having done a broad review of open source code for low resource languages 
 
 Scottish Gaelic (G\`aidhlig is the autonym) is a Celtic language spoken by roughly 60,000 people mainly in the United Kingdom and to a lesser extent in Canada. Gaelic - sometimes called Scots Gaelic, simply Gaelic, or the Gaelic - is a Goidelic or Q-Celtic language, along with Manx and Irish (also sometimes called Irish Gaelic, but here always referred to as Irish). This means that, while related to the Brythonic languages of Welsh, Cornish and Breton, it is different enough to not be able to benefit from the many resources available in Welsh, which, while endangered, has a much stronger academic interest and presence in the United Kingdom, with roughly half a million speakers. Gaelic has traditionally been heavily repressed, both politically and culturally, which has lead to its usage in largely restricted or rural areas, and in the domains of the house, church, and family \citep{mackinnon1991past}.
 
-The 2011 Scottish Census indicates that out of the total amount of Gaelic speakers, only around half - 32,191 person to be exact - read and write in Gaelic.\footnote{\href{http://www.scotlandscensus.gov.uk/}{http://www.scotlandscensus.gov.uk/}. \last{April~27}} 6,218 speak and read the language, but do not write it, while 4,646 can read it, but don't speak or write it. Gaelic officially is not a national language, although it is afforded certain protections under the European Charter for Regional or Minority Languages\footnote{\href{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}. \last{April~27}} (although, as this is an EU charter, it is unclear whether Britain will continue to ratify it following their impending exit from the European Union). The Gaelic Language (Scotland) Act of 2005 (GLS) gave Gaelic official status as an official language of Scotland\footnote{\href{http://www.legislation.gov.uk/asp/2005/7}{http://www.legislation.gov.uk/asp/2005/7}. \last{April~27}}, and set up the B\`ord na G\`aidhlig\footnote{\href{http://www.gaidhlig.scot/}{http://www.gaidhlig.scot/}. \last{April~27}} as a language developmental body tasked with protecting and vitalising the Gaelic language.
+The 2011 Scottish Census indicates that out of the total amount of Gaelic speakers, only around half - 32,191 person to be exact - read and write in Gaelic.\footnote{\href{http://www.scotlandscensus.gov.uk/}{http://www.scotlandscensus.gov.uk/}. \last{April~27}} 6,218 speak and read the language, but do not write it, while 4,646 can read it, but do not speak or write it. Gaelic officially is not a national language, although it is afforded certain protections under the European Charter for Regional or Minority Languages\footnote{\href{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}. \last{April~27}} (although, as this is an EU charter, it is unclear whether Britain will continue to ratify it following their impending exit from the European Union). The Gaelic Language (Scotland) Act of 2005 (GLS) gave Gaelic official status as an official language of Scotland\footnote{\href{http://www.legislation.gov.uk/asp/2005/7}{http://www.legislation.gov.uk/asp/2005/7}. \last{April~27}}, and set up the B\`ord na G\`aidhlig\footnote{\href{http://www.gaidhlig.scot/}{http://www.gaidhlig.scot/}. \last{April~27}} as a language developmental body tasked with protecting and vitalising the Gaelic language.
 
-The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}. \last{April~27}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG)\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en}. \last{April~27}}, the largest corpus project for Gaelic, but don't specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. There are some primary and secondary schools, as well as various Gaelic Language and Studies degrees at English-speaking universities, as well as one Gaelic-speaking university Sabhal M\`or Ostaig\footnote{\href{http://www.smo.uhi.ac.uk/en/}{http://www.smo.uhi.ac.uk/en/}. \last{April~27}} on Skye; educational material from the B\`ord is mainly focused in these areas.
+The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}. \last{April~27}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG)\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en}. \last{April~27}}, the largest corpus project for Gaelic, but do not specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. There are some primary and secondary schools, as well as various Gaelic Language and Studies degrees at English-speaking universities, as well as one Gaelic-speaking university Sabhal M\`or Ostaig\footnote{\href{http://www.smo.uhi.ac.uk/en/}{http://www.smo.uhi.ac.uk/en/}. \last{April~27}} on Skye; educational material from the B\`ord is mainly focused in these areas.
 
 \subsubsection{Language Vitality Status}
 
@@ -29,7 +29,7 @@ Some of these corpora are annotated - for instance, the Annotated Reference Corp
 
  More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh}. \last{April~27}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/}. \last{April~27}}, which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
 
-Navigating resources to identify what is open source and what isn't is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php}. \last{April~27}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?query=Gaelic}{http://linghub.org/search/?query=Gaelic}. \last{April~27}} GitHub returns 62 repositories that mention Gaelic\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic}. \last{April~27}}, although it is unclear if these are for Irish.
+Navigating resources to identify what is open source and what is not is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php}. \last{April~27}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?query=Gaelic}{http://linghub.org/search/?query=Gaelic}. \last{April~27}} GitHub returns 62 repositories that mention Gaelic\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic}. \last{April~27}}, although it is unclear if these are for Irish.
 
 The best resource is arguably Kornai's lab page\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656}. \last{April~27}} (again, in development). While not linking directly, it does give some information. It notes that there are: several language packs at the OS level for Ubuntu and Windows input, but not one for Mac, probably because Gaelic uses the Roman alphabet and a UK keyboard suffices for most needs;\footnote{I use the US International Keyboard with OSX to type Gaelic accents, myself, and have never needed another keyboard layout for this} a large Wikipedia; a Hunspell checker; OLAC texts (with marginally out of date numbers); a large Cr\'ubad\'an corpus (1,541,302 words and 17,308 documents), as well as a large Indigenous Tweets corpus with half a million words; and general coverage in Omniglot,\footnote{\href{http://omniglot.com/writing/gaelic.htm}{http://omniglot.com/writing/gaelic.htm}. \last{April~27}} bible.org,\footnote{\href{https://bible.org/}{https://bible.org/}. \last{April~27}} Panlex,\footnote{\href{https://panlex.org/}{https://panlex.org/}. \last{April~27}} and the Leipzig corpora \citep{goldhahn2012building}.\footnote{\href{http://wortschatz.uni-leipzig.de/en/download/}{http://wortschatz.uni-leipzig.de/en/download/}. \last{April~27}} Some of the stats are dubious. For instance, 15k wikipedia users seems odd for a language where there a total population of 30k literate speakers; and it is in WALS, quite clearly. However, in general, this gives a better overview than any other source.
 
@@ -78,7 +78,7 @@ Regardless of this paucity of data, there are certainly literary resources in Na
 \subsubsection{Language resources and developments}
 Naskapi has two scripts; both Latin, and the Unified Canadian Aboriginal Syllabics, which were added to Unicode in 1999.\footnote{\href{https://www.unicode.org/standard/supported.html}{https://www.unicode.org/standard/supported.html}. \last{April~27}} The Syllabics were introduced by missionaries in the 19th century, and quickly adopted by all Cree language communities, who approached near universal literacy \citep{bennett1991cree}. In Kawawachikamach and Schefferville (and on the train there), there are many examples of writing in syllabics.
 
-\citet{jancewicz2002applied} gives an insightful overview of computational technology in Naskapi. They note that Naskapi often weren't involved in typesetting literature in syllabics, and that few became typists when the first syllabic typewriters were introduced. Jancewicz is particularly well placed as the author of this paper (MacKenzie is also, as she has worked for decades with Cree communities as well as with the Naskapi), as he and his wife were the first two missionaries sent from SIL to the Naskapi community, and as they worked with the Band Office installing the first word processing system for syllabics, training Naskapi speakers, creating the first Naskapi TrueType font, and helping to release Keyman,\footnote{\href{https://keyman.com/}{https://keyman.com/}. \last{April~27}} "a keyboarding utility now ... that allowed the programming of custom keyboard input for various languages and character sets." \citep[85]{jancewicz2002applied} Keyman is now free, open source software available on GitHub.\footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp}. \last{April~27}} Indeed, the importance of Jancewicz's support to Naskapi digital ascendancy cannot be understated (except, perhaps, by Jancewicz himself):
+\citet{jancewicz2002applied} gives an insightful overview of computational technology in Naskapi. They note that Naskapi often were not involved in typesetting literature in syllabics, and that few became typists when the first syllabic typewriters were introduced. Jancewicz is particularly well placed as the author of this paper (MacKenzie is also, as she has worked for decades with Cree communities as well as with the Naskapi), as he and his wife were the first two missionaries sent from SIL to the Naskapi community, and as they worked with the Band Office installing the first word processing system for syllabics, training Naskapi speakers, creating the first Naskapi TrueType font, and helping to release Keyman,\footnote{\href{https://keyman.com/}{https://keyman.com/}. \last{April~27}} "a keyboarding utility now ... that allowed the programming of custom keyboard input for various languages and character sets." \citep[85]{jancewicz2002applied} Keyman is now free, open source software available on GitHub.\footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp}. \last{April~27}} Indeed, the importance of Jancewicz's support to Naskapi digital ascendancy cannot be understated (except, perhaps, by Jancewicz himself):
 
 \begin{quote}
 "Since 1988, the resident linguist has maintained all of his own language learning materials and language data on computer. He has also provided the local technical support that is needed in a small, isolated community, especially with regard to the esoteric development of computer programs that allow syllabic word processing. While it is not impossible to use computers in Native language work without a full-time, on- site computer resource person, it has been an obvious asset to have such a person available to provide training and technical support." \citep[86]{jancewicz2002applied}
@@ -115,9 +115,9 @@ While FLEx is open source, none of the linguists edit the code for it or use the
 "The authors hope that the dichotomy between "resource people" and "aboriginal people" reflected in the section headings above would become less and less distinct. ... As a growing number of local people gain experience and expertise to become their own resource persons, such a dichotomy will dissolve, and all the vital resources for language development will exist at a community level. However, until this ideal is realised, small language communities such as these must continue to identify and avail themselves of professional and academic resources found outside their communities." \citep[89]{jancewicz2002applied}
 \end{quote}
 
-This remains just as true, fifteen years on. There is work which could be done; for instance, moving the siloed dictionary efforts into the public web, and using bilingual texts from the Band Office to bootstrap corpora, POS taggers, spellcheckers (there isn't a Hunspell yet), and perhaps MT systems. However, this work would need to be matched by on-the-ground work by local community members - and, as \citet[90]{jancewicz2002applied} finally notes: "The initial learning curve is sometimes steep, but there is no substitute for hands-on experience."
+This remains just as true, fifteen years on. There is work which could be done; for instance, moving the siloed dictionary efforts into the public web, and using bilingual texts from the Band Office to bootstrap corpora, POS taggers, spellcheckers (there is not a Hunspell yet), and perhaps MT systems. However, this work would need to be matched by on-the-ground work by local community members - and, as \citet[90]{jancewicz2002applied} finally notes: "The initial learning curve is sometimes steep, but there is no substitute for hands-on experience."
 
-Open source is less of a concern for Naskapi as is general software; the community is so small that any code is liable to made by community members and open sourced, anyway. However, the tools which the linguists use to develop languages benefit from open source. Any SIL missionary can contribute to FLEx, which means that incremental changes in different communities can be folded back into work in Naskapi. Likewise, any work done on Cree or any related languages can be applied or projected onto Naskapi more easily if it is open source. Open source isn't a {\it sine qua non} for Naskapi technological development, then; but it is surely a benefit.
+Open source is less of a concern for Naskapi as is general software; the community is so small that any code is liable to made by community members and open sourced, anyway. However, the tools which the linguists use to develop languages benefit from open source. Any SIL missionary can contribute to FLEx, which means that incremental changes in different communities can be folded back into work in Naskapi. Likewise, any work done on Cree or any related languages can be applied or projected onto Naskapi more easily if it is open source. Open source is not a {\it sine qua non} for Naskapi technological development, then; but it is surely a benefit.
 
 % TODO Ask Bill for a copy of his MA thesis "Grammar enhanced biliteracy: Naskapi language structures for facilitating reading in Naskapi"
 
