--- a/discussion.tex
+++ b/discussion.tex
@@ -8,13 +8,13 @@ The most blatant advantage of open source is that any code developed is in the p
 
 As \citet{streiter2006implementing} recommends, open source can also generate a shared community of researchers interested in maintaining a pool of resources. Open source can also enforce changes to be in the open, thus allowing community members to contribute to similar code. The social aspect of shared code should not be overlooked, as it allows newcomers to learn how to work with technology, and helps offload continued work from a few hardcore NLP practitioners. The more coders are available within an ecosystem, the more code in that system can be developed and ultimately used - if it is open sourced.
 
-As was clear from looking at Gaelic, open source code widely leads to accessibility and for language resource generation. The difficulty of finding resources doesn't mean that there aren't any at the governmental, military, or enterprise level. However, what resources have been found have generally been open source; it is because Scannell and Bauer work largely with open source licensing that their work has been able to complement each other's and to build tooling around Gaelic resources. Hopefully, this trend will continue.
+As was clear from looking at Gaelic, open source code widely leads to accessibility and for language resource generation. The difficulty of finding resources does not mean that there are not any at the governmental, military, or enterprise level. However, what resources have been found have generally been open source; it is because Scannell and Bauer work largely with open source licensing that their work has been able to complement each other's and to build tooling around Gaelic resources. Hopefully, this trend will continue.
 
 On a more broad level, open source can certainly help language development for other LRLs through educational materials. Currently, software developers in the tens of thousands are learning how to code using open source tooling on GitHub. NLTK is one of the most popular projects on GitHub, and with almost a thousand citations on Google Scholar,\footnote{\href{https://scholar.google.com/scholar?q=NLTK}{https://scholar.google.com/scholar?q=NLTK}. \last{April~27}}, it is popular with academics, too. Open source has allowed it to thrive. Students using it may go on to use its tooling for their own languages; and, as more digital natives learn to code and as more languages find their own language communities online, it is hoped that more languages will digitally ascend.
 
 % I covered this enough. I would just be repeating myself.
-% \subsection{Why isn't more code open?}
-% Finally, I'll go into a little detail on the question of why more hasn't been open sourced, and how to find open source resources.
+% \subsection{Why is not more code open?}
+% Finally, I will go into a little detail on the question of why more has not been open sourced, and how to find open source resources.
 % - Longevity of linguistic scholarship and work
 
 % No need for a subsection; that's the entire point of this chapter.
